fixed alignment issues

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -17,6 +17,10 @@ body{font-size: 20px;}
     float:left;
     margin-top: 20px;
 }
+.steps-box:last-child{
+   
+    margin-top: 120px;
+}
 
 /* small tablet to big table:from 678 to 1023px*/
 @media only screen and (max-width: 1023px)
@@ -28,14 +32,17 @@ body{font-size: 20px;}
         margin-left:0%;
     }
 
-    .steps-box{ margin-top:10px;}
-    .steps-box:last-child{margin-top: 10px;}
+  
+  
     .works-steps{ margin-bottom:40px;}
     .works-steps:last-of-type{ margin-bottom: 80px;}
    
     .appscreen{width:50%;}
-    .icon-small{width:17px;
-    margin-right: 5px;}
+    .icon-small{width:17px;}
+    .steps-box:last-child{
+        padding-left: 3%;
+        margin-top: 120px;
+    }
 
     .city-feature{font-size: 90%;}
 
@@ -112,6 +119,9 @@ body{font-size: 20px;}
 
      .steps-box:first-child {text-align: center;}
      .appscreen{width:40px}
+     .steps-box:last-child{
+        padding-left: 3%;
+        margin-top: 19px ;   }
      
      .works-steps div {
         height: 40px;
@@ -119,7 +129,7 @@ body{font-size: 20px;}
          
         margin-right: 15px;
         padding: 4px;
-        font-size: 120;
+        
      }
 
      .works-steps{ margin-bottom:20px;}
@@ -139,7 +149,7 @@ body{font-size: 20px;}
         margin-top: 20px;
        }
     .hero-text-box{
-    top:50%;
+    top:35%;
     }
     .btn-app img{
         align-content: center;
@@ -149,11 +159,16 @@ body{font-size: 20px;}
 
     .works-steps div{
         align-items: center;
-        font-size: 130% important;
+        font-size: 24px important;
          display: block;
          height: 48%;
-         
-    }
+        }    
+    .steps-box:last-child{
+        padding-left: 0px;
+        margin-top: 60px;
+
+         }
+    
 /*Small phones:from 0 to 480px*/
 @media only screen and (max-width: 480px){
     body{font-size: 14px;}
@@ -183,7 +198,7 @@ body{font-size: 20px;}
     letter-spacing: 1px;
     }
     h2{
-    font-size: 20px;
+    font-size: 22px;
     word-spacing: 2px;
     letter-spacing: 1px;
     text-align: center;
@@ -216,6 +231,13 @@ body{font-size: 20px;}
     .footer-nav{
 
     }
+    .social-links {
+        list-style:none;
+        float:right;
+        display: flex;
+        align-items: center;
+        margin-right: 40px important;
+    }
     .logo {
         height: 60px;
         width: auto;
@@ -231,16 +253,12 @@ body{font-size: 20px;}
 
 }
 .works-steps div{
-    font-size: 161%;
+    font-size: 24px;
 }
 .app-screen{
     margin-left: 8%;
 }
-.footer-nav {
-     
-    display: flex;
-     
-   
-    }
-
+.footer-nav ul{
+    padding-left: 20x important;
+}
 }
